tests/ui/unexpected-punct.stderr
error: unexpected punct
 --> $DIR/tests/ui/unexpected-punct.rs:4:12
  |
4 |     fn [<a + b>]() {}
  |            ^
